# player

./: README.md
app/: build.gradle
app/src/main/: CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
